// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Steps BasicSteps renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    The standard steps component will render horizontally and scale according to the size of its parent.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "completed": true,
            "subtitle": "24.12.17 12:10",
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "selected": true,
            "title": "Step two",
          },
          Object {
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Steps ClickableSteps renders 1`] = `
<Fragment>
  <h2
    id="clickable-steps"
  >
    Clickable steps
  </h2>
  <p>
    Add an anchor element (
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
    ) to the list item element ( 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
    ). Ensure that all content within the list element is also inside the anchor element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "clickable": true,
            "completed": true,
            "title": "Step one",
          },
          Object {
            "clickable": true,
            "ongoing": true,
            "title": "Step two",
          },
          Object {
            "clickable": true,
            "title": "Step three",
          },
          Object {
            "selected": true,
            "title": "Step four",
          },
          Object {
            "title": "Step Five",
          },
          Object {
            "title": "Step Six",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Steps VerticalSteps renders 1`] = `
<Fragment>
  <h2
    id="vertical-steps"
  >
    Vertical steps
  </h2>
  <p>
    If you wish to use steps vertically you can add 
    <Property
      value=".steps-vertical"
    />
     to the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;DocContainer&gt;
    </PrismCode>
     element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "completed": true,
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "selected": true,
            "title": "Step two",
          },
          Object {
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
      vertical={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Steps renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Steps.
  </p>
  <BasicSteps />
  <VerticalSteps />
  <ClickableSteps />
</DocContainer>
`;
